--- a/99-charset.cnf
+++ b/99-charset.cnf
@@ -1,11 +1,11 @@
 [client]
-default-character-set=utf8mb4
+default-character-set=cp1251
 
 [mysql]
-default-character-set=utf8mb4
+default-character-set=cp1251
 
 [mysqld]
-character-set-server = utf8mb4
-character_set_server = utf8mb4
-collation-server = utf8mb4_unicode_ci
-collation_server = utf8mb4_unicode_ci
+character-set-server = cp1251
+character_set_server = cp1251
+collation-server = cp1251_general_ci
+collation_server = cp1251_general_ci
